============================================================================
SUMMARY OF NEW FEATURES AND BUG FIXES SINCE V4.0
============================================================================

Version 6.5.2 - not yet released
* user interface
  - fix hang during startup (#2662, #2663)
  - fix freeze in dialogs (#2664)

Version 6.5.1 - 2013/03/12
* infoboxes
  - fix MacCready adjustment for non-metric units (#2654)
* user interface
  - fix bogus "restart XCSoar" messages
  - fix cross section render error on some OpenGL chips (#2631, #2661)
  - allow gestures in cross section (#2655)
* devices
  - fix crash in Android Bluetooth driver (#2636, #2656)
  - fix NMEA input on Android Bluetooth Server
* data files
  - use the terrain cache even when the system clock is wrong
  - fix G record regression (#2657)

Version 6.5 - 2013/03/08
* map
  - lower zoom levels possible while circling (#1120)
  - draw FAI triangle areas (#1563)
  - optimise the terrain renderer
  - added "Wind Up" display orientation
  - high-resolution terrain renderer (Android/Linux only)
  - kinetic panning (Android/Linux only)
  - new terrain color ramp "Gaudy"
* calculations
  - don't detect landing while climbing in a wave (#1330, #2289, #2406)
  - basic support for the contest "DMSt" (#2208)
* tasks
  - add task start countdown (#136, #1080)
  - optimise racing tasks for minimum distance
  - allow observation zone sizes up to 200km (#2401)
  - always use "arrival safety height" when calculating arrival heights
    for intermediate task turnpoints
* devices
  - LX: support flight download from LXNAV Nano (#2085)
  - LX: support flight download from LX5000/LX7000 pro IGC
  - LX: read bugs setting from the LX160 vario (#2167)
  - Android/IOIO: support BMP085 sensor (DroidSoar V2)
  - Android/IOIO: support MS5611 pressure sensor
  - added driver for Levil AHRS device
  - Leonardo: read indicated airspeed from PDGFTL1 sentence
  - C-Probe: read IAS/TAS from the device