@@ -6,6 +6,7 @@ Version 6.5.2 - not yet released
 * user interface
   - fix hang during startup (#2662, #2663)
   - fix freeze in dialogs (#2664)
+  - automatically re-enable manual wind controls (#2336)
 
 Version 6.5.1 - 2013/03/12
 * infoboxes
